<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"> <!-- 50% opacity -->

    <!-- Centered pop-up container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        android:padding="16dp"
        android:elevation="10dp">

        <!-- Item Image -->
        <ImageView
            android:id="@+id/popup_item_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/donor_image" />

        <!-- Source Address -->

        <!-- Destination Address -->
        <TextView
            android:id="@+id/popup_source_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:text="@string/source_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/popup_destination_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/destination_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <!-- Deliver Button -->
        <Button
            android:id="@+id/deliver_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/copper"
            android:text="@string/deliver"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>
