<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="40dp"
    app:cardElevation="8dp"
    android:background="@drawable/card_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/card_bg">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/map"
            android:scaleType="centerCrop"
            android:contentDescription="@string/item_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:divider="@drawable/horizontal_line"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/src"
                android:layout_width="match_parent"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:text="@string/source_address"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dest"
                android:layout_width="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_height="wrap_content"
                android:text="@string/destination_address"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
