<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- Card View for Donor Input -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        android:background="@drawable/card_bg"
        app:cardElevation="10dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/card_bg">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/donor_image"
                android:scaleType="centerCrop"
                android:background="@drawable/card_bg"
                android:contentDescription="@string/item_image" />

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/copper"
                android:text="@string/add_image"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Wheat,Flour,Rice"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:backgroundTint="#00000000"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_description"
                android:inputType="text"
                android:gravity="start|top"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00000000" />

            <EditText
                android:id="@+id/exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expiry_date"
                android:inputType="date"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00000000" />

            <!-- Quantity and Food Type -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Quantity"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kg"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp" />

                <RadioButton
                    android:id="@+id/liter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Litres"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Quantity"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00000000" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>